<!DOCTYPE resources [<!ENTITY appname "Lame photo Viewer">]>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">&appname;</string>
    <string name="about">About</string>
    <string name="photo_title">Photos</string>
    <string name="people_title">People</string>
    <string name="album_title">Album</string>
    <string name="empty_album_label">Your album will appear here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Settings</string>
    <string name="secret_photos_title">Secret Photos</string>
    <string name="favorites_title">Favorites</string>
    <string name="file_explorer_title">File explorer</string>
    <string name="trash">Trash</string>
    <string name="create">Create</string>
    <string name="custom_album_title">Your albums</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>
    <string name="navigation_header">Navigation</string>

    <!-- Appearance Preferences -->
    <string name="theme_title">Theme</string>
    <string name="color_title">Color</string>

    <!-- Navigation Preferences -->
    <string name="bottom_bar_preference_title">Show/Hide bottom bar</string>
    <string name="licenses">Licenses</string>
    <string name="language_title">Language</string>
    <string name="share_title">Share</string>
    <string name="edit_title">Edit</string>
    <string name="delete_title">Delete</string>
    <string name="bright">Bright</string>
    <string name="add_icon">Add_icon</string>
    <string name="draw">Draw</string>
    <string name="filter">Filter</string>
    <string name="crop">Crop</string>
    <string name="changeColor">Color</string>
    <string name="gray">Grayscale</string>
    <string name="misty">Misty</string>
    <string name="none">None</string>
    <string name="lighten">Lighten</string>
    <string name="dark">Dark</string>
    <string name="colorise">Colorise</string>
    <string name="pencilDraw">Pencil</string>
    <string name="blur">Blur</string>
    <string name="big">Big</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="item_size">Item size</string>
    <string name="show_photo_list_as">Show photo list as</string>
    <string name="photo_list_view_type_key" translatable="false">photo_list_view_type</string>
    <string name="album_list_view_type_key" translatable="false">album_list_view_type</string>
    <string name="app_color_key" translatable="false">app_color</string>
    <string name="app_theme_key" translatable="false">app_theme</string>
    <string name="app_language_key" translatable="false">app_language</string>
    <string name="app_bottom_bar_navigation_key" translatable="false">app_bottom_bar_navigation</string>
    <string name="photo_list_item_size_key" translatable="false">photo_list_item_size</string>
    <string name="album_list_item_size_key" translatable="false">album_list_item_size</string>
    <string name="photo_list_item_size">Photo List item size</string>
    <string name="album_list_item_size">Album List item size</string>
    <string name="show_album_list_as">Show album list as</string>
    <string name="search">Search</string>
    <string name="save_image">Save image</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="open_in_another_app">Open in another app</string>
    <string name="move_to_secret_album">Move to Secret album</string>
    <string name="slideshow">Slideshow</string>
    <string name="rename">Rename</string>
    <string name="rotate">Rotate</string>
    <string name="photo_properties">Properties</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_not_granted">To continue, please give &appname;
        access to your photos</string>
    <string name="undo">Undo</string>
    <string name="select_all">Select all</string>
    <string name="set_as">Set as</string>
    <string name="refresh">Refresh</string>
    <string name="display">Display</string>
    <string name="adaptive_icon_title">Adaptive icon color</string>
    <string name="adaptive_icon_color_key" translatable="false">adaptive_icon_color</string>
    <string name="experimental_options">Experimental \&amp; Developers options</string>
    <string name="adapter_color_summary">The app could be crashed when enabling this option</string>
    <string name="image_debugger_key" translatable="false">image_debugger</string>
    <string name="image_debugger">Image debugger</string>
    <string name="full_screen_view_image_key" translatable="false">full_screen_view_image_key</string>
    <string name="pick_color">Pick color</string>
    <string name="pick_weight">Brush thickness </string>
    <string name="add_on_image">Add</string>
    <string name="full_screen_view_image">View image in fullscreen</string>
    <string name="add_from_phone">Add from phone</string>
    <string name="emojis">Emoji</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="snow_effect">Snow</string>
    <string name="smooth_effect">Smooth</string>
    <string name="noise_effect" translatable="false">Noise</string>
    <string name="path">Path</string>
    <string name="date_created">Date created</string>
    <string name="location">Location</string>
    <string name="geo">Coordinates</string>
    <string name="nothing_here" translatable="false">Nothing here</string>
    <string name="add_album_dialog_hint">Album name</string>
    <string name="add_album_dialog_error_blank_field" translatable="false">Blank fields are not allowed</string>
    <string name="add_album_dialog_error_name_existed">Name existed</string>
    <string name="file_duplicate_warning_dialog_title">Name existed</string>
    <string name="file_duplicate_warning_dialog_msg">The same filename exist. Do you want to override</string>
    <string name="override">Override</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="new_file">New file</string>
    <string name="delete_warning_dialog_title">Remove from device</string>
    <string name="delete_warning_dialog_msg">Do you really want to delete this?</string>
    <string name="yes" translatable="false">@android:string/yes</string>
    <string name="no" translatable="false">@android:string/no</string>
    <string name="failed">Failed</string>
    <string name="failed_filename_exist_again">Failed because the same filename exist again</string>
    <string name="set_file_name_dialog_title">File name</string>
    <string name="rename_unsucceed">Renamed</string>
    <string name="rename_succeed">Could not rename</string>
    <string name="move_succeed">Moved</string>
    <string name="move_unsucceed">Could not move</string>
    <string name="no_app_found" translatable="false">No App found</string>
    <string name="copy_succeed">Copied</string>
    <string name="copy_file_unsucceed">Could not copy</string>
    <string name="image_saved">Image Saved</string>
    <string name="image_saved_fail">Could not save the image</string>
    <string name="unknownName" translatable="false">@android:string/unknownName</string>
    <string name="detect_face_title">Face detect</string>
    <string name="detect_in_progress">Detect in progress</string>
    <string name="size">Size</string>
    <string name="image_size">Resolution</string>
    <string name="action_add_to_favourite">Add to favourite album</string>
    <string name="add_to_custom_album">Add to album</string>
    <string name="action_remove_favourite">Remove from favourite album</string>
    <string name="action_add_to_secret_album">Add to Secret folder</string>
    <string name="action_remove_from_secret_album">Remove from secret folder</string>
    <string name="remove_favourite_dialog_title" translatable="false">@string/action_remove_favourite</string>
    <string name="remove_favourite_dialog_msg">Your photo will not be removed</string>
    <string name="action_add_to_favourite_succeed">Added to favourite album</string>
    <string name="action_remove_from_favourite_succeed">Removed from favourite album</string>
    <string name="action_remove_from_custom_album">Remove from custom album</string>
    <string name="action_remove_from_custom_album_succeed">Photos removed</string>
    <string name="pick_custom_album_dialog_title">Pick an album</string>
    <string name="add_photo_to_custom_album_succeed">Added to %1$s</string>
    <string name="add_photo_dialog_title">Pick photo</string>
    <string name="change_place">Change place</string>
    <string name="change_place_success">Change place successful</string>
    <string name="select">Select</string>
    <string name="sort_order_key" translatable="false">sort_order_key</string>
    <string name="group_by_key" translatable="false">group_by_key</string>
    <string name="action_group_by">Group by</string>
    <string name="date_added">Date added</string>
    <string name="date_modified">Date modified</string>
    <string name="date_taken">Date taken</string>
    <string name="action_order_by">Order by</string>
    <string name="input_password">Enter password to proceed:</string>
    <string name="new_confirm_not_same">New password &amp; old password mismatched</string>
    <string name="pass_incorrect">Incorrect password</string>
    <string name="change_pass_success">Password changed</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="change_pass">Change password</string>
    <string name="retry">Retry</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="pass_key" translatable="false">pass</string>
    <string name="move_from_secret_album" translatable="false">Move from secret album</string>
    <string name="start_service">Start service detect face</string>
    <string name="redo">Redo</string>
    <string name="start_detect_face_dialog_title">Warning</string>
    <string name="start_detect_face_dialog_msg">This function is still in development process, and it may cause infuration. Do you want to continue?</string>
</resources>