<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/photo_list_item_view_type"
        android:icon="@drawable/ic_outline_list_alt_24"
        android:title="@string/show_photo_list_as"
        android:titleCondensed="View"
        android:visible="true"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_view_size"
        android:title="@string/item_size"
        app:showAsAction="never">

        <menu android:id="@+id/photo_list_item_size_menu">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_view_size_big"
                    android:title="@string/big" />
                <item
                    android:id="@+id/item_view_size_medium"
                    android:title="@string/medium" />
                <item
                    android:id="@+id/item_view_size_small"
                    android:title="@string/small" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_order_by"
        android:title="@string/action_order_by">

        <menu android:id="@+id/group_by_menu">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_order_by_date_added"
                    android:title="@string/date_added" />
                <item
                    android:id="@+id/action_order_by_date_modified"
                    android:title="@string/date_modified" />
                <item
                    android:id="@+id/action_order_by_date_taken"
                    android:title="@string/date_taken" />
            </group>
        </menu>
    </item>
</menu>