<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bright"
        android:icon="@drawable/ic_outline_brightness_7_24"
        android:title="@string/bright" />
    <item
        android:id="@+id/add_icon"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_on_image" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_outline_filter_alt_24"
        android:title="@string/filter" />
    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_outline_crop_24"
        android:title="@string/crop" />
    <item
        android:id="@+id/change_color"
        android:icon="@drawable/ic_outline_color_lens_24"
        android:title="@string/changeColor" />
</menu>