<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_add_to_favourite"
        android:icon="@drawable/favorite_create_black_24dp"
        android:title="@string/action_add_to_favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_favourite"
        android:icon="@drawable/favorite_remove_black_24dp"
        android:title="@string/action_remove_favourite"
        android:visible="false"
        app:showAsAction="always" />

    <item

        android:id="@+id/action_add_to_custom_album"
        android:icon="@drawable/ic_baseline_library_add_24"
        android:title="@string/add_to_custom_album"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_from_custom_album"
        android:icon="@drawable/ic_outline_library_add_24"
        android:title="@string/action_remove_from_custom_album"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_to_secret_album"
        android:icon="@drawable/ic_baseline_lock_24"
        android:title="@string/action_add_to_secret_album"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_secret_album"
        android:icon="@drawable/ic_outline_lock_24"
        android:title="@string/action_remove_from_secret_album"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_multiple_delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete_title"
        app:showAsAction="ifRoom" />

</menu>