<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_photo"
        android:contentDescription="@string/photo_title"
        android:enabled="true"
        android:icon="@drawable/selector_photo"
        android:title="@string/photo_title" />

    <item
        android:id="@+id/page_people"
        android:contentDescription="@string/people_title"
        android:enabled="true"
        android:icon="@drawable/selector_face"
        android:title="@string/people_title" />
    <item
        android:id="@+id/page_album"
        android:contentDescription="@string/album_title"
        android:enabled="true"
        android:icon="@drawable/selector_photo_album"
        android:title="@string/album_title" />
    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />
</menu>