<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/passwordOutlineBox"
            android:hint="@string/old_pass"
            app:boxStrokeColor="?colorOnSurface"
            app:endIconMode="password_toggle"
            app:errorContentDescription="@string/pass_incorrect"
            app:errorEnabled="true"

            app:errorTextColor="?colorError"
            app:hintTextColor="?colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?colorOnSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/passwordOutlineBox"
            android:hint="@string/new_pass"
            app:boxStrokeColor="?colorOnSurface"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="?colorError"
            app:hintTextColor="?colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/passwordOutlineBox"
            android:hint="@string/confirm_pass"
            app:boxStrokeColor="?colorOnSurface"
            app:endIconMode="password_toggle"
            app:errorContentDescription="@string/new_confirm_not_same"
            app:errorEnabled="true"
            app:errorTextColor="?colorError"
            app:hintTextColor="?colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</layout>